# bazel_examples

./: README.md
cc_coverage_example/: WORKSPACE
cc_coverage_example/Bazel/: BUILD.bazel  cc_coverage.bzl  cc_coverage.py  collect_file_aspect.bzl  coverage_transition.bzl
cc_coverage_example/Bazel/Toolchains/Lcov/: BUILD.bazel  dependencies.bzl  toolchain.bzl
cc_coverage_example/Example/: BUILD.bazel
