load(":toolchain.bzl", "lcov_toolchain")

toolchain_type(name = "lcov_toolchain_type")

lcov_toolchain(
    name = "lcov_linux",
    local_lcov_executable = "/usr/bin/lcov",
    local_genhtml_executable = "/usr/bin/genhtml",
    tags = ["manual"],
)

toolchain(
    name = "lcov_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":lcov_linux",
    toolchain_type = ":lcov_toolchain_type",
)
